<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.twofold</groupId>
    <artifactId>valen</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>valen-app</module>
        <module>valen-core</module>
        <module>valen-export-dds</module>
        <module>valen-export-gltf</module>
        <module>valen-export-png</module>
        <module>valen-format-gltf</module>
        <module>valen-format-png</module>
        <module>valen-game-eternal</module>
        <module>valen-game-spacemarines2</module>
        <module>valen-ui</module>
    </modules>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <dapper.version>2.41.2</dapper.version>
        <javafx.version>23.0.1</javafx.version>
        <immutables.version>2.10.1</immutables.version>
        <slf4j.version>2.0.16</slf4j.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.github.jbock-java</groupId>
                            <artifactId>dapper-compiler</artifactId>
                            <version>${dapper.version}</version>
                        </path>
                        <dependency>
                            <groupId>org.immutables</groupId>
                            <artifactId>value</artifactId>
                            <version>${immutables.version}</version>
                        </dependency>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.5.2</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <!-- Logging for all -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Testing for all -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Project -->
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-export-dds</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-export-gltf</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-export-png</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-format-gltf</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-format-png</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.redeye</groupId>
                <artifactId>valen-game-spacemarines2</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-game-eternal</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-ui</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External -->
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>tinybcdec</artifactId>
                <version>0.2</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.11.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.errorprone</groupId>
                        <artifactId>error_prone_annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.github.jbock-java</groupId>
                <artifactId>dapper</artifactId>
                <version>${dapper.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <!-- Annotations -->
            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>value</artifactId>
                <version>${immutables.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>26.0.2</version>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.11.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.26.3</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
